--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,7 @@
-<p>
-    Feel free to shoot us an email at info@workhap.com
-</p>
+<h2 class="pb-2 ps-2">Contact</h2>
+
+<div class="ps-2">
+    <p>
+        Feel free to shoot us an email at info@workhap.com
+    </p>
+</div>
