Add contact us form

--- a/about.html
+++ b/about.html
@@ -1,50 +1,53 @@
 <h2 class="pb-2 ps-2">About</h2>
 
 <div class="ps-2">
-    <p>
-        Hiya, welcome to Work Hap. An affordable tool for those that desire a culture of innovation and creativity. Work Hap aims to simulate chance encounters in an office environment in the age of remote work.
-    </p>
+  <p>
+    Hiya, welcome to Work Hap. An affordable tool for those that desire a culture of innovation and creativity. Work Hap
+    aims to simulate chance encounters in an office environment in the age of remote work.
+  </p>
 </div>
 
 <div class="p-5 mb-4 bg-light rounded-3">
-    <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Workplace happenstance!</h1>
-            <p class="col-md-8 fs-4">Let's fight work fatigue by building meaningful
-                relationships through chance encounters and unplanned interactions to stay happy, healthy, productive and engaged in the age of remote work.</p>
-            <button class="btn btn-primary btn-lg" type="button" id="signup">Sign up today</button>
-    </div>
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Workplace happenstance!</h1>
+    <p class="col-md-8 fs-4">Let's fight work fatigue by building meaningful
+      relationships through chance encounters and unplanned interactions to stay happy, healthy, productive and engaged
+      in the age of remote work.</p>
+    <button class="btn btn-primary btn-lg" type="button" id="signup">Sign up today</button>
+  </div>
 </div>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="img/nocoordination.jpeg" class="card-img-top" alt="No Coordination">
-        <div class="card-body">
-          <h5 class="card-title">No coordination needed</h5>
-          <p class="card-text">The impromptu nature of Work Hap interactions simulates how team members would run into each
-            other in an office environment and removes the friction for
-            coordinating meetings.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-          <img src="img/collide.jpeg" class="card-img-top" alt="People Collide">
-          <div class="card-body">
-            <h5 class="card-title">Create happenstance</h5>
-            <p class="card-text">Work Hap is designed to spark both collaboration and innovation that is triggered
-              when people collide.</p>
-          </div>
-        </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="img/productive.jpeg" class="card-img-top" alt="More Productive">
-        <div class="card-body">
-          <h5 class="card-title">Increase productivity</h5>
-          <p class="card-text">These chance encounters will allows employees to enjoy time spent with
-            like-minded colleagues while improving their performance and productivity.</p>
-        </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="img/nocoordination.jpeg" class="card-img-top" alt="No Coordination">
+      <div class="card-body">
+        <h5 class="card-title">No coordination needed</h5>
+        <p class="card-text">The impromptu nature of Work Hap interactions simulates how team members would run into
+          each
+          other in an office environment and removes the friction for
+          coordinating meetings.</p>
       </div>
     </div>
   </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="img/collide.jpeg" class="card-img-top" alt="People Collide">
+      <div class="card-body">
+        <h5 class="card-title">Create happenstance</h5>
+        <p class="card-text">Work Hap is designed to spark both collaboration and innovation that is triggered
+          when people collide.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="img/productive.jpeg" class="card-img-top" alt="More Productive">
+      <div class="card-body">
+        <h5 class="card-title">Increase productivity</h5>
+        <p class="card-text">These chance encounters will allows employees to enjoy time spent with
+          like-minded colleagues while improving their performance and productivity.</p>
+      </div>
+    </div>
+  </div>
+</div>
