--- a/pricing.html
+++ b/pricing.html
@@ -1,14 +1,14 @@
 <h2 class="pb-2 ps-2">Enterprise Pricing</h2>
 
 <div class="ps-2">
-    <p>
-        Work Hap provides pricing options for enterprises of various size.
-    </p>
+  <p>
+    Work Hap provides pricing options for enterprises of various size.
+  </p>
 </div>
 
 <div class="p-3 pt-5 pb-md-4 mx-auto text-center">
-    <p class="fs-5 text-muted">Choose the pricing option that fits the needs of your enterprise.</p>
-  </div>
+  <p class="fs-5 text-muted">Choose the pricing option that fits the needs of your enterprise.</p>
+</div>
 
 <div>
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -64,6 +64,7 @@
 </div>
 
 <div id="alert" class="alert alert-warning alert-dismissible fade show d-none" role="alert">
-  <strong>Stay tuned!</strong> Our team at Work Hap is working hard to roll out our plans for small and mid-size enterprises.
+  <strong>Stay tuned!</strong> Our team at Work Hap is working hard to roll out our plans for small and mid-size
+  enterprises.
   <button id="close" type="button" class="btn-close" aria-label="Close"></button>
 </div>
