--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,69 @@
 <h2 class="pb-2 ps-2">Contact</h2>
 
-<div class="ps-2">
-    <p>
-        Feel free to shoot us an email at info@workhap.com
-    </p>
+<div id="contact">
+    <div class="ps-2">
+        <p>
+            Feel free to shoot us an email at info@workhap.com or fill out the form below:
+        </p>
+    </div>
+
+    <form class="ps-2">
+
+        <div class="messages"></div>
+
+        <div class="controls">
+
+            <div class="row">
+                <div class="col-md-6 pt-3">
+                    <div class="form-group">
+                        <label class="pb-3">Firstname</label>
+                        <input type="text" name="name" class="form-control " placeholder="John">
+                    </div>
+                </div>
+                <div class="col-md-6 pt-3">
+                    <div class="form-group">
+                        <label class="pb-3">Lastname</label>
+                        <input type="text" name="surname" class="form-control" placeholder="Smith">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 pt-3">
+                    <div class="form-group">
+                        <label class="pb-3">Email</label>
+                        <input type="email" name="email" class="form-control" placeholder="johnsmith@gmail.com">
+                    </div>
+                </div>
+                <div class="col-md-6 pt-3">
+                    <div class="form-group">
+                        <label class="pb-3">Category</label>
+                        <select name="category" class="form-control">
+                            <option value=""></option>
+                            <option value="quote">Request a quote</option>
+                            <option value="feedback">Send feedback</option>
+                            <option value="question">Ask a question</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 pt-3">
+                    <div class="form-group">
+                        <label class="pb-3">Message</label>
+                        <textarea name="message" class="form-control" placeholder="Why was Work Hap started?"
+                            rows="4"></textarea>
+                    </div>
+                </div>
+                <div class="col-md-12 pt-3">
+                    <input id="send" class="btn btn-primary" value="Send message">
+                </div>
+            </div>
+
+        </div>
+
+    </form>
 </div>
+
+
+<p class="d-none pt-3" id="sent">Your message was sent to us. We will get back to you very soon.</p>
