--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/index.js"></script>
     <script src="js/signup.js"></script>
     <script src="js/pricing.js"></script>
+    <script src="js/contact.js"></script>
 
     <title>Work Hap</title>
 </head>
