--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,8 @@
 <h2 class="pb-2 ps-2">Employee Sign Up</h2>
 
 <p class="ps-2 pb-2">
-  If your employer has a Work Hap membership you can create your profile here. Work Hap will then match you with other team members within your organization for virtual one-on-one coffee chats or group discussions of various size.
+  If your employer has a Work Hap membership you can create your profile here. Work Hap will then match you with other
+  team members within your organization for virtual one-on-one coffee chats or group discussions of various size.
 </p>
 
 <h4 class="pt-3 ps-2" id="title">Fill out sign up form</h4>
@@ -21,7 +22,7 @@
     <p>Birthday</p>
     <input type="date" name="birthday" placeholder="10/22/1995" class="form-control">
   </div>
-  
+
   <div class="page mb-4">
     <p>Company</p>
     <input type="text" name="company" placeholder="Adobe" class="form-control">
@@ -36,10 +37,11 @@
 
   <div id="invite">
     <h4 class="pt-5 ps-2" id="title">Invite your employer</h4>
-    <p class="ps-2 pb-2 pt-1">You can invite your employer to join Work Hap if they do not already have a membership:</p>
+    <p class="ps-2 pb-2 pt-1">You can invite your employer to join Work Hap if they do not already have a membership:
+    </p>
     <button type="button" class="btn btn-primary d-block w-100 mt-3" id="membership">View Enterprise Plans</button>
   </div>
-  
+
   <h4 class="pt-3 ps-2" id="message"></h4>
   <textarea rows="7" class="form-control mt-3 d-none" id="json"></textarea>
   <p class="pt-3" id="submitted"></p>
